<resources>
    <string name="app_name">Portal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="registered">"Registered! "</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_displayName">Incorrect Display Name</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="location">Location</string>
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="mapList">Map/List</string>
    <string name="off_Switch">Map</string>
    <string name="on_Switch">List</string>
    <string name="add_item">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="cart">Cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="cancel_item">Cancel Item</string>


</resources>
