<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <Button
        android:id="@+id/clear_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:text="@string/clear_cart" />

    <TextView
        android:id="@+id/cartText"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/cart"
        app:autoSizeTextType="uniform" />

    <LinearLayout
        android:id="@+id/cartItemClicked"
        android:layout_width="410dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/cancel_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cancel_item" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cancel" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/cart_scroll"
        android:layout_width="match_parent"
        android:layout_height="591dp"
        android:layout_alignTop="@id/cartText"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="0dp"> >

        <LinearLayout
            android:id="@+id/cart_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</RelativeLayout>