<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <Button
        android:id="@+id/cartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:text="@string/cart" />

    <LinearLayout
        android:id="@+id/itemClicked"
        android:layout_width="410dp"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/add_item" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cancel" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/menu_scroll"
        android:layout_width="match_parent"
        android:layout_height="591dp"
        android:layout_alignTop="@id/cartButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:id="@+id/menu_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</RelativeLayout>